Improve API docs with more descriptions and better examples
